[package]
name = "easycap-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9.1"
rusb-async = "0.0.1-alpha"

[patch.crates-io]
rusb = {path = "../rusb"}
rusb-async = { path = "../rusb/rusb-async/" }