[package]
name = "easycap"
version = "0.0.0"
edition = "2021"
description = "WIP EasyCap USB 2.0 Video Capture Device Driver"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9.1"
rusb-async = "0.0.1-alpha"

[patch.crates-io]
rusb = {path = "../rusb"}
rusb-async = { path = "../rusb/rusb-async/" }